# mle-registry

./: README.md  justfile  pyproject.toml
docs/: dvc_architecture.md  mlflow_architecture.md
dvc/: README.md  docker-compose.yml  requirements.txt  train.py
dvc-wine/: .gitignore  README.md  data.dvc  dvc.yaml  inference.py  metrics.dvc  models.dvc  params.yaml  plots.dvc  pyproject.toml  train.py
dvc/.dvc/: config
mlflow/: Dockerfile  README.md  docker-compose.yml  feature_importance.csv  ml_experiment.py  requirements.txt
mlflow-wine/: Dockerfile  README.md  inference.py  pyproject.toml  train.py
