[project]
name = "mle_registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.9",
]
dvc = [
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
]
mlflow = [
    "mlflow[extras]>=2.22.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
